fix: add text alignment in the price card

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -73,7 +73,7 @@
     }
 
     &__price {
-
+        text-align: right;
     }
 
     &__change-price {
